# plate-solver

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTES.md  PROGRESS.md  README.md  codemeta.json  golden_results.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
_incoming/: run_circle.py  run_circle_1d_2d.py  run_clamped_circle.py  run_clamped_lshape.py  run_ktn.py  run_ladder_1d.py  run_ladder_circle.py  run_ladder_mms.py  run_ladder_rect_clamped.py  run_ladder_rect_hinge.py  run_lshape_contact.py  run_lshape_verify.py  run_rvachev_vs_penalty.py  run_stamp_1d.py  run_stamp_ritz.py
_incoming/plates/: __init__.py  analytic.py  assembler.py  basis.py  clamped.py  contact.py  ktn.py  ladder.py  penalty.py  plate.py  stamp.py  stamp_ritz.py  verify_fem.py  viz.py
_incoming/tests/: test_basis.py  test_circle_1d_2d.py  test_clamped.py  test_contact.py  test_geometry.py  test_ktn.py  test_ladder.py  test_lshape.py  test_plate_circle.py  test_poisson_disk.py  test_quadrature.py  test_rvachev_vs_penalty.py  test_stamp.py  test_stamp_ritz.py  test_viz.py
cases/: README.md  baselines.json
cases/ci/: annulus_clamped.toml  annulus_soft.toml  circle_clamped.toml  circle_clamped_contact.toml  circle_mms.toml  circle_point.toml  circle_soft.toml  compose_cutout.toml  karman_circle_clamped_immovable.toml  karman_square_clamped_immovable.toml  ktn_full_circle_clamped_gaussian.toml  ktn_full_circle_clamped_uniform.toml  lshape_contact.toml  lshape_stamp.toml  lshape_stamp_force.toml  rect_cfff.toml  rect_levy.toml  rect_levy_asym.toml  rect_mms.toml  rect_navier_patch.toml  rect_navier_point.toml  rect_sfsf.toml  two_plates_equal.toml  two_plates_ring.toml
cases/ladder/: annulus_clamped.toml  annulus_soft.toml  annulus_soft_contact.toml  circle_clamped.toml  circle_clamped_contact.toml  circle_point_clamped.toml  circle_point_soft.toml  circle_soft.toml  karman_circle_hencky_limit.toml  karman_square_levy_sweep.toml  ktn_full_thickness_sweep.toml  lshape_clamped.toml  lshape_contact.toml  lshape_soft.toml  lshape_stamp.toml  lshape_stamp_force.toml  mms_circle.toml  mms_rect.toml  rect_cfff.toml  rect_clamped.toml  rect_hinge.toml  rect_levy_asym.toml  rect_navier_patch.toml  rect_navier_point.toml  rect_sfsf.toml  two_plates_equal.toml  two_plates_mixed_bc.toml  two_plates_ring.toml
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  CASE_SCHEMA.md  FEATURES.md  MIGRATION.md  NOTES.md  RELEASING.md  THEORY.md  dispatch_flow.md  make_dispatch_flow.py
examples/: circular_plate.py  contact_strip.py
notebooks/: 01_circle_api.ipynb  02_annulus_case.ipynb  03_compose_cutout.ipynb  04_point_load.ipynb  05_two_plates.ipynb  06_theory_comparison.ipynb  07_theory_ladder.ipynb  08_stamp_two_plates.ipynb  README.md
results/reference/: reference_v0.3.csv  reference_v0.3.md  reference_v0.4.csv  reference_v0.4.md  reference_v0.5.csv  reference_v0.5.md  reference_v0.6.md
scripts/: doc_matrix.py  golden_config.py  import_graph.py  make_registration_kit.py  make_review_zip.sh  reproduce_all.py  run_circle.py  run_circle_1d_2d.py  run_clamped_circle.py  run_clamped_lshape.py  run_golden.py  run_ktn.py  run_ladder_1d.py  run_ladder_circle.py  run_ladder_mms.py  run_ladder_rect_clamped.py  run_ladder_rect_hinge.py  run_lshape_contact.py  run_lshape_verify.py  run_reference.py  run_rvachev_vs_penalty.py  run_stamp_1d.py  run_stamp_ritz.py
src/plate_solver/: __init__.py  analytic.py  analytic_auto.py  assembler.py  benchmarks.py  clamped.py  cli.py  config.py  contact.py  contact_face.py  contact_nl.py  diagnostics.py  dispatch.py  export.py  faces.py  geometry.py  green1d.py  ktn.py  ktn_full.py  ktn_solver.py  ladder.py  membrane.py  mor1d.py  penalty.py  plate.py  poisson.py  problem.py  problems.py  quadrature.py  radial.py  references.py  stamp.py  stamp_ritz.py  strip_contact.py  theory.py  verify_fem.py  viz.py
src/plate_solver/analytic/: __init__.py  circular.py  strip_contact.py
src/plate_solver/contact/: __init__.py  mor.py  mor1d.py
src/plate_solver/data/: README.md  stamp_maple_xy.txt
src/plate_solver/geometry/: __init__.py  rfunctions.py
src/plate_solver/model/: __init__.py  ktn.py  problems.py
src/plate_solver/solver/: __init__.py  biharmonic.py  green1d.py  poisson.py
tests/: conftest.py  test_analytic.py  test_analytic_factory.py  test_annulus_analytic.py  test_annulus_cases.py  test_annulus_contact.py  test_api_examples.py  test_basis.py  test_ci_cases.py  test_circle_1d_2d.py  test_clamped.py  test_clamped_contact.py  test_cli.py  test_contact.py  test_contact_face.py  test_contact_ktn.py  test_diagnostics.py  test_dispatch.py  test_doc_matrix.py  test_doc_policy.py  test_export.py  test_face_deflection.py  test_faces.py  test_fem_reference.py  test_force_stamp.py  test_free_edge.py  test_gap_field.py  test_geometry.py  test_geometry_registry.py  test_golden_config.py  test_golden_consistency.py  test_golden_hash.py  test_karman.py  test_ktn.py  test_ktn_full.py  test_ladder.py  test_lshape.py  test_lshape_stamp.py  test_mixed_bc.py  test_mms_reference.py  (+26 more)
