[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plate-solver"
dynamic = ["version"]
description = "Расчёт изгиба и контактного взаимодействия упругих пластин произвольного очертания (уточнённая теория КТН + R-функции + метод обобщённой реакции)."
readme = "README.md"
# tomllib (чтение case-файлов, problem.py) — stdlib начиная с 3.11.
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "А. А. Дуркин" }]
keywords = [
    "plates", "bending", "contact-problem", "R-functions",
    "generalized-reaction-method", "biharmonic", "computational-mechanics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
]

[project.optional-dependencies]
# matplotlib — в основных зависимостях (viz.py и тесты графики); дубль убран.
dev = ["pytest>=7.0", "ruff>=0.4", "build>=1.0", "twine>=5.0"]
fem = ["scikit-fem>=9"]      # независимая МКЭ-верификация (тесты с маркером fem)
notebooks = ["jupyter", "ipympl"]   # интерактивные ноутбуки (D3; не dev-зависимость)

[project.scripts]
# v0.2: plate-solve (решение case-файла; --new — шаблон; --sweep p=2:12:2),
# plate-verify (таблица эталонов, exit 0/1), plate-ladder (каталог → сводка).
plate-solve = "plate_solver.cli:main"
plate-verify = "plate_solver.cli:main_verify"
plate-ladder = "plate_solver.cli:main_ladder"

[project.urls]
Homepage = "https://github.com/AnatoDu/plate-solver"
Repository = "https://github.com/AnatoDu/plate-solver"
Changelog = "https://github.com/AnatoDu/plate-solver/blob/main/CHANGELOG.md"
Documentation = "https://github.com/AnatoDu/plate-solver/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# Единый источник версии — plate_solver.__version__.
version = { attr = "plate_solver.__version__" }

[tool.setuptools.package-data]
# Эталон Maple (аналитическое решение задачи со штампом) едет вместе с пакетом.
plate_solver = ["data/*.txt"]

[tool.pytest.ini_options]
# pythonpath = ["src"] позволяет запускать `pytest` без установки пакета;
# "scripts" нужен тестам-воротам, импортирующим run_*-скрипты (test_ladder и др.).
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "big: тяжёлые тесты (квадратуры Q≥1024: много памяти и времени); исключать: -m 'not big'",
    "fem: требуют scikit-fem (независимая МКЭ-верификация); исключать: -m 'not fem'",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
